p4notelte: use aosp charger in lpm mode, fix up audio for use as a BIG phone.....

--- a/overlay-common/device/samsung/smdk4412-common/DeviceSettings/res/values/config.xml
+++ b/overlay-common/device/samsung/smdk4412-common/DeviceSettings/res/values/config.xml
@@ -19,7 +19,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   
     <!-- Audio Tuning -->
-    <bool name="has_incall_audio_tuning">false</bool>
+    <bool name="has_incall_audio_tuning">true</bool>
     <bool name="has_output_audio_tuning">true</bool>
 
 </resources>
