p4notelte: add irda HAL and enable service
Change-Id: I0beabc9349f4419a43b36329f2e95195c4130852

--- a/overlay-common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-common/frameworks/base/core/res/res/values/config.xml
@@ -48,4 +48,7 @@
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
+
+    <!-- True if the Irda service should be started at system start -->
+    <bool name="config_enableIrdaManagerService">true</bool>
 </resources>
