p4notelte: updates for 4.4
Change-Id: I08dd68b4610a168bcd479df1080dca2cca982970

--- a/overlay-common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-common/frameworks/base/core/res/res/values/config.xml
@@ -50,5 +50,5 @@
     <integer name="config_deviceHardwareKeys">0</integer>
 
     <!-- True if the Irda service should be started at system start -->
-    <bool name="config_enableIrdaManagerService">true</bool>
+    <!--<bool name="config_enableIrdaManagerService">true</bool>-->
 </resources>
