p4notelte: update overlays
Change-Id: I873b03a5428ab32a5057fe8b0b05c0da7d282715

--- a/overlay-common/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-common/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,5 +24,9 @@
     <!-- Should "4G" be shown instead of "LTE" when the network is NETWORK_TYPE_LTE? -->
     <bool name="config_show4GForLTE">false</bool>
 
+    <!-- Whether we're using the tablet-optimized recents interface (we use this
+     value at runtime for some things) -->
+    <bool name="config_recents_interface_for_tablets">true</bool>
+
 </resources>
 
