--- a/overlay-common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-common/frameworks/base/core/res/res/values/config.xml
@@ -27,7 +27,7 @@
     <bool name="config_forceDisableHardwareKeyboard">true</bool>
 
     <!-- Boolean to enable stylus gestures -->
-    <bool name="config_stylusGestures">true</bool>
+   <!--<bool name="config_stylusGestures">true</bool>-->
     
     <!-- Set to true if separate software navigation bar is required on this device. -->
     <bool name="config_showNavigationBar">true</bool>
@@ -45,9 +45,25 @@
              4 - Menu
              8 - Assistant (search)
             16 - App switch
+            32 - Camera
+            64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">0</integer>
+    <integer name="config_deviceHardwareKeys">64</integer>
+
+    <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
+         This integer should equal the sum of the corresponding value for each
+         of the following keys present:
+             1 - Home
+             2 - Back
+             4 - Menu
+             8 - Assistant (search)
+            16 - App switch
+            32 - Camera
+            64 - Volume rocker
+         For example, a device with Home, Back and Menu keys would set this
+         config to 7. -->
+    <integer name="config_deviceHardwareWakeKeys">64</integer>
 
     <!-- Enable lockscreen translucent decor -->
     <bool name="config_enableLockScreenTranslucentDecor">true</bool>
