p4notelte: update overlay
Change-Id: I6a58cab8b54ce5edd60b73da4d9b68ad756a37ad

--- a/overlay-common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-common/frameworks/base/core/res/res/values/config.xml
@@ -24,7 +24,7 @@
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
 
     <!-- Workaround for devices with broken keyboards -->
-    <bool name="config_forceDisableHardwareKeyboard">true</bool>
+    <bool name="config_forceDisableHardwareKeyboard">false</bool>
 
     <!-- Boolean to enable stylus gestures -->
    <!--<bool name="config_stylusGestures">true</bool>-->
